// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressButton /> should render, first step 1`] = `
<React.Fragment>
  <span
    className="container"
  >
    <svg
      className="svg"
      height="2em"
      viewBox="0 0 180 180"
      width="2em"
    >
      <g
        className="group downloading"
      >
        <circle
          className="progress"
          cx={90}
          cy={90}
          fill="none"
          opacity={1}
          r={70}
          strokeDasharray={439.822971502571}
          strokeDashoffset={439.822971502571}
          strokeLinecap="round"
          strokeWidth={20}
          transform="rotate(-90 90 90)"
        />
        <circle
          cx={90}
          cy={90}
          fill="none"
          r={61}
        />
      </g>
    </svg>
    <span
      className="download-icon icon icon-common icon-download-alt"
    />
  </span>
</React.Fragment>
`;

exports[`<ProgressButton /> should render, with failure 1`] = `
<React.Fragment>
  <span
    className="container failed"
  >
    <svg
      className="svg"
      height="2em"
      viewBox="0 0 180 180"
      width="2em"
    >
      <g
        className="group"
      >
        <circle
          className="progress"
          cx={90}
          cy={90}
          fill="none"
          opacity={0}
          r={70}
          strokeDasharray={439.822971502571}
          strokeDashoffset={87.96459430051418}
          strokeLinecap="round"
          strokeWidth={20}
          transform="rotate(-90 90 90)"
        />
        <circle
          cx={90}
          cy={90}
          fill="none"
          r={61}
        />
      </g>
    </svg>
    <span
      className="download-icon icon icon-common icon-save"
    />
  </span>
</React.Fragment>
`;

exports[`<ProgressButton /> should render, with progress 1`] = `
<React.Fragment>
  <span
    className="container"
  >
    <svg
      className="svg"
      height="2em"
      viewBox="0 0 180 180"
      width="2em"
    >
      <g
        className="group downloading"
      >
        <circle
          className="progress"
          cx={90}
          cy={90}
          fill="none"
          opacity={1}
          r={70}
          strokeDasharray={439.822971502571}
          strokeDashoffset={219.9114857512855}
          strokeLinecap="round"
          strokeWidth={20}
          transform="rotate(-90 90 90)"
        />
        <circle
          cx={90}
          cy={90}
          fill="none"
          r={61}
        />
      </g>
    </svg>
    <span
      className="download-icon icon icon-common icon-download-alt"
    />
  </span>
</React.Fragment>
`;

exports[`<ProgressButton /> should render, with success 1`] = `
<React.Fragment>
  <span
    className="container"
  >
    <svg
      className="svg"
      height="2em"
      viewBox="0 0 180 180"
      width="2em"
    >
      <g
        className="group"
      >
        <circle
          className="progress"
          cx={90}
          cy={90}
          fill="none"
          opacity={0}
          r={70}
          strokeDasharray={439.822971502571}
          strokeDashoffset={0}
          strokeLinecap="round"
          strokeWidth={20}
          transform="rotate(-90 90 90)"
        />
        <circle
          cx={90}
          cy={90}
          fill="none"
          r={61}
        />
      </g>
    </svg>
    <span
      className="download-icon icon icon-common icon-save"
    />
  </span>
</React.Fragment>
`;
